--- a/package.json
+++ b/package.json
@@ -6,64 +6,33 @@
     "upgrade:all": "yarn upgrade-interactive --latest",
     "lint": "eslint '*/**/*.{ts,tsx}' --report-unused-disable-directives",
     "lint:fix": "eslint '*/**/*.{ts,tsx}' --fix",
-    "postinstall": "preconstruct dev",
-    "build": "preconstruct build",
-    "watch": "preconstruct watch",
-    "size": "bundlesize",
+    "prepare": "yarn build",
+    "build": "lerna run --scope amplify* build",
     "test:unit": "jest",
-    "test:e2e-auth": "yarn workspace e2e-test-auth test",
-    "test:e2e-react-admin": "yarn workspace e2e-test-react-admin test"
+    "test:e2e-auth": "yarn workspace e2e-test-auth test"
   },
   "workspaces": [
     "e2e-tests/*",
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "@preconstruct/cli": "^2.0.0",
-    "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "babel-eslint": "10.1.0",
-    "babel-plugin-optimize-clsx": "^2.6.1",
-    "babel-plugin-react-remove-properties": "^0.3.0",
-    "bundlesize": "^0.18.0",
     "cross-env": "^7.0.2",
-    "eslint": "7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "5.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "26.6.0",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
-    "lerna": "^3.22.1",
+    "eslint": "8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "jest": "27.4.3",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
+    "lerna": "^4.0.0",
     "prettier": "^2.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.3"
-  },
-  "preconstruct": {
-    "packages": [
-      "packages/*"
-    ]
-  },
-  "bundlesize": [
-    {
-      "name": "amplify-auth-hooks",
-      "path": "./packages/amplify-auth-hooks/dist/amplify-auth-hooks.cjs.prod.js",
-      "maxSize": "4 Kb"
-    },
-    {
-      "name": "amplify-material-ui",
-      "path": "./packages/amplify-material-ui/dist/amplify-material-ui.cjs.prod.js",
-      "maxSize": "9 Kb"
-    }
-  ]
+    "typescript": "^4.5.2"
+  }
 }
