--- a/packages/amplify-auth-hooks/package.json
+++ b/packages/amplify-auth-hooks/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@aws-amplify/auth": "^3.4.12",
     "@aws-amplify/core": "^3.8.4",
+    "@types/gapi.auth2": "^0.0.55",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "amazon-cognito-identity-js": "^4.5.5",
