--- a/packages/amplify-auth-hooks/package.json
+++ b/packages/amplify-auth-hooks/package.json
@@ -28,22 +28,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "react-script-hook": "^1.2.1",
-    "tiny-invariant": "^1.1.0"
+    "react-script-hook": "^1.5.0",
+    "tiny-invariant": "^1.2.0"
   },
   "peerDependencies": {
-    "@aws-amplify/auth": "^1.2.24",
-    "@aws-amplify/core": "^1.0.27",
-    "amazon-cognito-identity-js": "^3.2.0",
+    "@aws-amplify/auth": ">=1.2.24",
+    "@aws-amplify/core": ">=1.0.27",
+    "amazon-cognito-identity-js": ">=3.2.0",
     "react": ">=16"
   },
   "devDependencies": {
-    "@aws-amplify/auth": "^3.4.12",
-    "@aws-amplify/core": "^3.8.4",
+    "@aws-amplify/auth": "^4.3.18",
+    "@aws-amplify/core": "^4.3.10",
     "@types/gapi.auth2": "^0.0.55",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "amazon-cognito-identity-js": "^4.5.5",
+    "amazon-cognito-identity-js": "^5.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
